k8s/backend-deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: backend
  namespace: dce
  labels:
    app: backend
spec:
  replicas: 5
  selector:
    matchLabels:
      app: backend
  template:
    metadata:
      name: backend
      labels:
        app: backend
    spec:
      containers:
        - name: backend
          image: ghcr.io/jakubpavlicek/dce_semestralka-backend:master
          imagePullPolicy: IfNotPresent
          ports:
            - containerPort: 5000
              protocol: TCP
