k8s/frontend-deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: frontend
  namespace: dce
  labels:
    app: frontend
spec:
  replicas: 3
  selector:
    matchLabels:
      app: frontend
  template:
    metadata:
      name: frontend
      labels:
        app: frontend
    spec:
      containers:
        - name: frontend
          image: ghcr.io/jakubpavlicek/dce_semestralka-frontend:master
          imagePullPolicy: IfNotPresent
          ports:
            - containerPort: 8080
              protocol: TCP
